--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.4", features = ["derive"] }
+log = "0.4.19"
+pretty_env_logger = "0.5.0"
 rand = "0.8.5"
