--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.3.4", features = ["derive"] }
 log = "0.4.19"
 pretty_env_logger = "0.5.0"
 rand = "0.8.5"
+tokio = { version = "1", features = ["full"] }
