--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ log = "0.4.19"
 pretty_env_logger = "0.5.0"
 rand = "0.8.5"
 tokio = { version = "1", features = ["full"] }
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
