Fix: Run ViRust Help Menu Task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,7 +27,7 @@
     {
       "type": "cargo",
       "command": "run",
-      "args": ["--help"],
+      "args": ["--", "--help"],
       "problemMatcher": ["$rustc", "$rust-panic"],
       "label": "Run ViRust Help Menu"
     }
