Update: Launch Configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,11 @@
                     "kind": "bin"
                 }
             },
-            "args": [],
-            "cwd": "${workspaceFolder}"
+            "args": ["memory"],
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "RUST_LOG": "TRACE"
+            }
         },
         {
             "type": "lldb",
