--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.26"
 clap = { version = "4.3.4", features = ["derive"] }
+eframe = "0.22.0"
 log = "0.4.19"
 pretty_env_logger = "0.5.0"
 rand = "0.8.5"
