--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "virust"
 version = "1.0.1"
 edition = "2021"
 
+[build]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -14,7 +17,11 @@ pretty_env_logger = "0.5.0"
 rand = "0.8.5"
 tokio = { version = "1", features = ["full"] }
 
+[profile.dev]
+incremental = true
+
 [profile.release]
+incremental = true
 strip = true
 lto = true
 codegen-units = 1
