--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ eframe = "0.22.0"
 log = "0.4.19"
 pretty_env_logger = "0.5.0"
 rand = "0.8.5"
+thousands = "0.2.0"
 tokio = { version = "1", features = ["full"] }
 
 [profile.dev]
